# argos

./: .clang-format  CMakeLists.txt  README.md  config.go  go.mod  logger.go  main.go
core/: main.cpp
